--- a/E-commerce-main/package.json
+++ b/E-commerce-main/package.json
@@ -17,12 +17,11 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "express-session": "^1.18.0",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
-    "md5": "^2.3.0",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "zod": "^3.23.8"
   }
