--- a/E-commerce-main/package.json
+++ b/E-commerce-main/package.json
@@ -1,7 +1,6 @@
 {
   "name": "e-commerce-or",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -24,5 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "zod": "^3.23.8"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
